--- a/src/components/statistics/statistics.scss
+++ b/src/components/statistics/statistics.scss
@@ -75,6 +75,7 @@ $lora: "Lora", serif;
       .chart-container {
         width: 100%;
         height: 100%;
+        align-items: center;
       }
       div {
         display: flex;
@@ -94,38 +95,22 @@ $lora: "Lora", serif;
   .statistics {
     display: flex;
     flex-direction: column;
-    font-family: "Source Sans Pro", sans-serif;
-    height: 100%;
     width: 80%;
-    color: white;
-    font-size: 24px;
     margin: 0 auto;
     &__specification {
-      width: 100%;
-      margin: 0;
-      padding-right: 20px;
       border-right: none;
       .role-title {
-        font-family: $lora;
-        text-align: center;
-        width: 100%;
-        font-size: 30px;
+        font-size: 24px;
       }
       .role-img {
         width: 100%;
         text-align: center;
-        padding-top: 50px;
+        padding: 20px 0;
       }
     }
     &__basic {
-      padding-top: 0px;
-      padding-left: 0px;
       width: 100%;
 
-      .chart-container {
-        width: 100%;
-        height: 100%;
-      }
       div {
         display: flex;
         flex-direction: column;
@@ -142,46 +127,16 @@ $lora: "Lora", serif;
 }
 @media (max-width: 720px) {
   .statistics {
-    display: flex;
-    font-family: "Source Sans Pro", sans-serif;
-    height: 100%;
-    width: 100%;
-    color: white;
-    font-size: 24px;
-    &__specification {
-      width: 100%;
-      margin: 0;
-      padding-right: 20px;
-      // border-right: 1px solid#7e633b;
-      .role-title {
-        font-family: $lora;
-        text-align: center;
-        width: 100%;
-        // margin-top: 44px;
-        font-size: 30px;
-      }
-      .role-img {
-        width: 100%;
-        text-align: center;
-        padding-top: 50px;
-      }
-    }
     &__basic {
-      padding-top: 0px;
-      padding-left: 0px;
-      width: 100%;
-
-      div {
-        display: flex;
-        flex-direction: column;
-        gap: 60%;
-      }
+      width: 60%;
+      margin: 0 auto;
       span {
-        margin-left: 24px;
-        font-size: 24px;
-        font-weight: 700;
-        width: 100%;
+        font-size: 18px;
       }
     }
   }
+}
+@media (max-width: 480px) {
+}
+@media (max-width: 375px) {
 }
