--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -33,6 +33,7 @@ $light-gold: #da9f47;
   align-items: flex-start;
   background-color: rgba($color: #000000, $alpha: 0.7);
   backdrop-filter: blur(10px);
+  // border: 3px dashed $dark-gold;
   .product {
     margin: 17px;
     text-decoration: none;
