--- a/src/components/tips/tips.scss
+++ b/src/components/tips/tips.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   font-family: "Lora", serif;
-  gap: 10px;
+  gap: 1%;
 
   div {
     font-size: 30px;
@@ -26,7 +26,7 @@
     }
 
     li {
-      padding: 20px 20px 20px 20px;
+      padding: 20px;
       font-size: 18px;
       border-left: 1.8px solid greenyellow;
       border-right: 1.8px solid greenyellow;
@@ -51,6 +51,93 @@
       border-right: 1.8px solid red;
       background-color: rgba(255, 0, 0, 0.3);
       text-align: left;
+    }
+  }
+}
+@media (max-width: 1080px) {
+  .tips {
+    div {
+      font-size: 1.5em;
+    }
+    &__ally {
+      li {
+        font-size: 1em;
+      }
+    }
+    &__enemy {
+      li {
+        font-size: 1em;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .tips {
+    div {
+      font-size: 1.2em;
+    }
+    &__ally {
+      li {
+        font-size: 0.9em;
+      }
+    }
+    &__enemy {
+      li {
+        font-size: 0.9em;
+      }
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .tips {
+    div {
+      font-size: 1.1em;
+    }
+    &__ally {
+      li {
+        font-size: 0.8em;
+      }
+    }
+    &__enemy {
+      li {
+        font-size: 0.8em;
+      }
+    }
+  }
+}
+@media (max-width: 480px) {
+  .tips {
+    div {
+      font-size: 0.9em;
+    }
+    &__ally {
+      li {
+        font-size: 0.6em;
+      }
+    }
+    &__enemy {
+      li {
+        font-size: 0.6em;
+      }
+    }
+  }
+}
+@media (max-width: 375px) {
+  .tips {
+    div {
+      font-size: 0.7em;
+    }
+    &__ally {
+      li {
+        font-size: 0.4em;
+      }
+    }
+    &__enemy {
+      li {
+        font-size: 0.4em;
+      }
     }
   }
 }
