--- a/src/pages/champion/champion.scss
+++ b/src/pages/champion/champion.scss
@@ -3,6 +3,7 @@ $lora: "Lora", serif;
 $dark-gold: #7e633b;
 $goldenrod: #daa520ff;
 $golden-brown: #866513ff;
+// zaimportowac zmienne w globalnym pliku variables.scss
 html {
   min-width: 100%;
   width: 100%;
