--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -1,8 +1,6 @@
-$lora: "Lora", serif;
-$dark-gold: #7e633b;
-$light-gold: #da9f47;
+@import "../../theme/variables.scss";
 .nav-back {
-  height: 100px;
+  height: 130px;
   // background-color: rgba(26, 25, 34);
 }
 
@@ -10,17 +8,18 @@ $light-gold: #da9f47;
   width: 100%;
   max-width: 1280px;
   height: 15vh;
-  color: $light-gold;
+  color: white;
   margin: 0 auto;
   line-height: 15vh;
   text-align: center;
-  font-size: 40px;
+  font-size: 100px;
   text-transform: uppercase;
-  font-family: $lora;
+  font-family: "Trade Winds", cursive;
   background-color: rgba($color: #000000, $alpha: 0.7);
   backdrop-filter: blur(10px);
   font-weight: 700;
-  padding-top: 30px;
+  padding-top: 70px;
+  padding-bottom: 50px;
 }
 
 .champions-list {
@@ -155,6 +154,8 @@ $light-gold: #da9f47;
     font-size: 0;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
   }
   .champions-list {
     justify-content: center;
@@ -174,6 +175,18 @@ $light-gold: #da9f47;
             font-weight: 400;
             height: 1.5em;
             line-height: 1.5em;
+          }
+          &:hover {
+            transform: none;
+            transition: 0;
+            box-shadow: none;
+            div {
+              font-size: 0.8rem;
+              line-height: 1rem;
+              height: 1rem;
+              transition: 0;
+              text-shadow: none;
+            }
           }
         }
       }
@@ -186,11 +199,13 @@ $light-gold: #da9f47;
     height: 50px;
     background-color: rgba(26, 25, 34);
   }
+
   .title {
     background-image: url("../navbar/logos/League-of-Info-m.png");
     font-size: 0;
     background-repeat: no-repeat;
     background-position: center;
+    padding: 20px 0 20px 0;
   }
   .champions-list {
     justify-content: center;
@@ -211,12 +226,28 @@ $light-gold: #da9f47;
             height: 1.5em;
             line-height: 1.5em;
           }
+          &:hover {
+            transform: none;
+            transition: 0;
+            box-shadow: none;
+            div {
+              font-size: 0.8rem;
+              line-height: 1rem;
+              height: 1rem;
+              transition: 0;
+              text-shadow: none;
+            }
+          }
         }
       }
     }
   }
 }
 @media (min-width: 481px) and (max-width: 720px) {
+  .title {
+    font-size: 50px;
+    padding-top: 40px;
+  }
   .nav-back {
     height: 70px;
     background-color: rgba(26, 25, 34);
@@ -244,6 +275,10 @@ $light-gold: #da9f47;
             line-height: 1.5em;
           }
           &:hover {
+            transform: none;
+            transition: 0;
+            box-shadow: none;
+
             div {
               font-size: 18px;
               line-height: 30px;
@@ -256,6 +291,9 @@ $light-gold: #da9f47;
   }
 }
 @media (min-width: 721px) and (max-width: 900px) {
+  .title {
+    font-size: 70px;
+  }
   .nav-back {
     height: 70px;
     background-color: rgba(26, 25, 34);
@@ -283,10 +321,16 @@ $light-gold: #da9f47;
             line-height: 1.5em;
           }
           &:hover {
+            transform: none;
+            transition: 0;
+            box-shadow: none;
+
             div {
-              font-size: 22px;
-              line-height: 35px;
-              height: 35px;
+              font-size: 0.8rem;
+              line-height: 1rem;
+              height: 1rem;
+              transition: 0;
+              text-shadow: none;
             }
           }
         }
@@ -295,6 +339,9 @@ $light-gold: #da9f47;
   }
 }
 @media (min-width: 901px) and (max-width: 1080px) {
+  .title {
+    font-size: 80px;
+  }
   .nav-back {
     height: 70px;
     background-color: rgba(26, 25, 34);
@@ -320,6 +367,18 @@ $light-gold: #da9f47;
             font-weight: 400;
             height: 1.5em;
             line-height: 1.5em;
+          }
+          &:hover {
+            transform: none;
+            transition: 0;
+            box-shadow: none;
+            div {
+              font-size: 0.8rem;
+              line-height: 1rem;
+              height: 1rem;
+              transition: 0;
+              text-shadow: none;
+            }
           }
         }
       }
