--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  height: 100px;
+  height: 130px;
   left: 5%;
   right: 5%;
   width: 90%;
@@ -40,6 +40,22 @@
         cursor: pointer;
         color: #d59930;
       }
+      // &::after {
+      //   content: "";
+      //   display: block;
+      //   position: absolute;
+      //   width: 90px;
+      //   height: 50px;
+      //   background-color: rgba(26, 25, 34);
+      // }
+      // &:nth-child(2)::after {
+      //   width: 120px;
+      //   height: 50px;
+      //   background-image: url("../../../public/ImagesData/role/fighter.webp");
+      //   background-size: 50%;
+      //   background-repeat: no-repeat;
+      //   background-position: center;
+      // }
     }
   }
 }
