--- a/src/components/statistics/statistics.scss
+++ b/src/components/statistics/statistics.scss
@@ -1,21 +1,21 @@
-$lora: "Lora", serif;
-
+@import "../../theme/variables.scss";
 .statistics {
   display: flex;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: $lora;
   height: 100%;
   width: 100%;
   color: white;
   font-size: 24px;
   &__specification {
-    width: 100%;
+    width: 50%;
     margin: 0;
     border-right: 1px solid#7e633b;
     .role-title {
-      font-family: $lora;
+      font-family: $secondaryFont;
       text-align: center;
       width: 100%;
       font-size: 30px;
+      font-weight: 300;
     }
     .role-img {
       width: 100%;
@@ -28,6 +28,7 @@ $lora: "Lora", serif;
     justify-content: center;
     padding-top: 20px;
     padding-left: 40px;
+    width: 50%;
 
     div {
       display: flex;
@@ -35,10 +36,11 @@ $lora: "Lora", serif;
       gap: 60%;
     }
     span {
-      margin-left: 24px;
-      font-size: 24px;
-      font-weight: 700;
+      font-family: $secondaryFont;
+      font-size: 20px;
+      font-weight: 200;
       width: 100%;
+      text-transform: uppercase;
     }
   }
 }
