--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "./theme/variables.scss";
 body {
   margin: 0;
   padding: 0;
@@ -13,10 +14,21 @@ body {
   background-image: url("./layout/backgr.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  // background-color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: $light-gold;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $golden-brown;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: wheat;
 }
