--- a/src/pages/champion/champion.scss
+++ b/src/pages/champion/champion.scss
@@ -1,142 +1,105 @@
-$title-size: 30px;
-$lora: "Lora", serif;
-$dark-gold: #7e633b;
-$goldenrod: #daa520ff;
-$golden-brown: #866513ff;
-// zaimportowac zmienne w globalnym pliku variables.scss
+@import "../../theme/variables.scss";
 html {
   min-width: 100%;
   width: 100%;
 }
-.champion {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: black;
+.champion__wrapper {
+  .champion {
+    z-index: 2;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
 
-  .profile {
-    position: relative;
-    height: 716px;
-    text-align: center;
-
-    &__title {
-      text-transform: uppercase;
-      font-family: "Permanent Marker", cursive;
-      width: 100%;
-      color: white;
-      font-size: 70px;
-      padding-bottom: 10px;
-    }
-    &__avatar {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column-reverse;
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      height: 716px;
-      width: 100%;
-      background-size: cover;
-      background-position: 00% center;
-      box-shadow: inset 0px -40px 100px 100px rgba(0, 0, 0, 1);
-    }
-  }
-  .border-subtitle {
-    margin-top: 40px;
-    font-family: "Courgette", cursive;
-    border: 13px groove goldenrod;
-    color: white;
-    font-size: 40px;
-    border-bottom: 0px;
-
-    position: relative;
-    height: 50px;
-    text-align: center;
-
-    span {
-      padding: 8px 35px;
-      margin: 0 auto;
-      background-color: black;
-      border-top-left-radius: 30px;
-      border-top-right-radius: 30px;
+    .profile {
       position: relative;
-      top: -40px;
-      border-left: 2px solid goldenrod;
-      border-right: 2px solid goldenrod;
-      border-bottom: 3px solid rgb(218, 165, 32);
-      box-shadow: 0px 16px 20px -13px rgba(212, 194, 0, 1);
-    }
-  }
-  .about {
-    border-right: 13px groove goldenrod;
-    border-left: 13px groove goldenrod;
-    &__title {
-      font-size: 30px;
-      margin: 0 auto;
-      border: 10px double $dark-gold;
-
-      margin-top: 25px;
-      color: white;
-
-      font-family: "Lora", serif;
-      width: 80%;
-      border-bottom: none;
+      height: 716px;
       text-align: center;
-      padding: 30px;
-      color: white;
-    }
-    &__champion-history {
-      margin: 0 auto;
-      border-left: 10px double $dark-gold;
-      border-right: 10px double $dark-gold;
 
+      &__title {
+        text-transform: uppercase;
+        font-family: $secondaryFont;
+        width: 100%;
+        color: white;
+        font-size: 70px;
+        padding-bottom: 10px;
+      }
+      &__avatar {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column-reverse;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        height: 716px;
+        width: 100%;
+        background-size: cover;
+        background-position: top;
+        box-shadow: inset 0px -10px 100px 100px rgba(0, 0, 0, 1);
+      }
+    }
+    .border-subtitle {
+      margin-top: 40px;
+
+      border: 13px groove goldenrod;
       color: white;
-      font-size: 20px;
-      font-family: "Lora", serif;
-      width: 80%;
-      border-bottom: none;
+      font-size: 40px;
+      border-bottom: 0px;
+
+      position: relative;
+      height: 50px;
       text-align: center;
-      padding: 30px;
-    }
-  }
-  .wrapper-bigger {
-    border: 13px groove goldenrod;
-    border-top: none;
-    .wrapper-smaller {
-      width: 80%;
-      margin: 0 auto;
-      border: 10px double $dark-gold;
 
-      padding: 30px;
-      margin-bottom: 50px;
+      span {
+        padding: 8px 35px;
+        margin: 0 auto;
+        background-color: black;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+        position: relative;
+        top: -40px;
+        border-left: 2px solid goldenrod;
+        border-right: 2px solid goldenrod;
+        border-bottom: 3px solid rgb(218, 165, 32);
+        box-shadow: 0px 16px 20px -13px rgba(212, 194, 0, 1);
+        font-family: $secondaryFont;
+      }
+    }
+
+    .wrapper-bigger {
+      border: 13px groove goldenrod;
       border-top: none;
+      .wrapper-smaller {
+        width: 80%;
+        margin: 0 auto;
+        border: 10px double $dark-gold;
+        padding: 0 30px 0 30px;
+        margin-bottom: 50px;
+      }
+    }
+  }
+  .back-to-main {
+    display: flex;
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    font-size: 40px;
+    color: $golden-brown;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    width: 55px;
+    height: 45px;
+    border: 4px solid $golden-brown;
+    border-radius: 15px;
+    background-color: $goldenrod;
+    cursor: pointer;
+    &:hover {
+      color: black;
     }
   }
 }
-// .stat-span {
-//   width: 100%;
-//   color: white;
-//   text-align: center;
-//   font-family: "Courgette", cursive;
-//   margin-top: 34px;
-//   display: block;
-//   font-size: 40px;
-//   margin-bottom: 36px;
-// }
-// .tips-span {
-//   width: 100%;
-//   color: white;
-//   border-top: 1.8px solid rgb(72, 0, 0);
-//   border-right: 1.8px solid rgb(72, 0, 0);
-//   border-left: 1.8px solid rgb(72, 0, 0);
-//   font-family: "Courgette", cursive;
-//   margin-top: 34px;
-//   display: block;
-//   padding: 20px 0;
-//   font-size: 40px;
-//   text-align: center;
-//   text-transform: uppercase;
-// }
+
 @media (max-width: 1360px) {
   .champion {
     width: 100%;
@@ -151,7 +114,6 @@ html {
         background-repeat: no-repeat;
         background-position: 50% 15%;
         height: 100%;
-        // box-shadow: inset 0px -20px 72px 64px rgb(0, 0, 0);
         box-shadow: inset -30px 10px 12px 14px rgba(0, 0, 0, 0.8),
           inset 30px -50px 12px 14px rgba(0, 0, 0, 0.8);
       }
@@ -161,23 +123,9 @@ html {
       border-bottom: none;
       span {
         font-size: 36px;
-        font-size: $lora;
       }
     }
-    .about {
-      border-right: 12px groove goldenrod;
-      border-left: 12px groove goldenrod;
-      &__title {
-        font-size: 2em;
-        border: 8px double $dark-gold;
-        border-bottom: none;
-      }
-      &__champion-history {
-        font-size: 1.1em;
-        border-left: 8px double $dark-gold;
-        border-right: 8px double $dark-gold;
-      }
-    }
+
     .wrapper-bigger {
       border: 12px groove goldenrod;
       border-top: none;
@@ -212,23 +160,9 @@ html {
       border-bottom: none;
       span {
         font-size: 26px;
-        font-size: $lora;
       }
     }
-    .about {
-      border-right: 7px groove goldenrod;
-      border-left: 7px groove goldenrod;
-      &__title {
-        font-size: 1.5em;
-        border: 5px double $dark-gold;
-        border-bottom: none;
-      }
-      &__champion-history {
-        font-size: 1em;
-        border-left: 5px double $dark-gold;
-        border-right: 5px double $dark-gold;
-      }
-    }
+
     .wrapper-bigger {
       border: 7px groove goldenrod;
       border-top: none;
@@ -254,7 +188,6 @@ html {
         background-repeat: no-repeat;
         background-position: 50% 15%;
         height: 100%;
-        // box-shadow: inset 0px -20px 72px 64px rgb(0, 0, 0);
         box-shadow: inset -30px 10px 12px 14px rgba(0, 0, 0, 0.8),
           inset 30px -50px 12px 14px rgba(0, 0, 0, 0.8);
       }
@@ -264,23 +197,10 @@ html {
       border-bottom: none;
       span {
         font-size: 26px;
-        font-size: $lora;
+        font-family: $sourceSansFont;
       }
     }
-    .about {
-      border-right: 7px groove goldenrod;
-      border-left: 7px groove goldenrod;
-      &__title {
-        font-size: 1.5em;
-        border: 5px double $dark-gold;
-        border-bottom: none;
-      }
-      &__champion-history {
-        font-size: 1em;
-        border-left: 5px double $dark-gold;
-        border-right: 5px double $dark-gold;
-      }
-    }
+
     .wrapper-bigger {
       border: 7px groove goldenrod;
       border-top: none;
@@ -313,7 +233,7 @@ html {
         background-repeat: no-repeat;
         background-position: 50% 15%;
         height: 100%;
-        // box-shadow: inset 0px -20px 72px 64px rgb(0, 0, 0);
+
         box-shadow: inset -30px 10px 12px 14px rgba(0, 0, 0, 0.8),
           inset 30px -100px 12px 14px rgba(0, 0, 0, 0.8);
       }
@@ -321,33 +241,20 @@ html {
     .border-subtitle {
       border: 7px groove goldenrod;
       border-bottom: none;
+      margin-top: 10px;
       span {
         font-size: 16px;
-        font-size: $lora;
       }
     }
-    .about {
-      border-right: 7px groove goldenrod;
-      border-left: 7px groove goldenrod;
-      &__title {
-        margin-top: 0;
-        font-size: 1.2em;
-        border: none;
-        margin: 0;
-        background-color: $golden-brown;
-      }
-      &__champion-history {
-        font-size: 0.7em;
-        border-left: none;
-        border-right: none;
-      }
-    }
+
     .wrapper-bigger {
       border: 7px groove goldenrod;
       border-top: none;
+      padding: 0px;
       .wrapper-smaller {
         border: none;
         border-top: none;
+        padding: 10px 0;
       }
     }
   }
